--- a/style.css
+++ b/style.css
@@ -17,6 +17,22 @@ div{
     margin: 40px auto;
     padding:40px;
 }
+.container.flash{
+  -webkit-animation-name: flashBackground;
+  -webkit-animation-duration: 100ms;
+  /*-webkit-animation-timing-function: ease-in-out;*/
+  -webkit-animation-direction: alternate;
+  -webkit-animation-iteration-count: 1;
+}
+@-webkit-keyframes flashBackground{
+  from{
+    background: white;
+  }
+  to{
+    background: red;
+  }
+}
+
 #scores{
     position: absolute;
     padding:10px;
@@ -36,13 +52,31 @@ div{
   display:block;
 }
 .enemy{
-  fill: red;
+  /*fill: red;*/
+  stroke-width: 2;
   stroke: black;
 }
 .player{
-  fill: #ff7400;
+  fill: #fff373;
   stroke: black;
+  stroke-width: 2;
 }
 .player.active{
-  fill: #ffd073;
+  -webkit-animation-name: flash;
+  -webkit-animation-duration: 500ms;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes flash{
+  from{
+    fill:#70ed3b;
+    stroke:#ff2300;
+    stroke-width:4;
+  }
+  to{
+    fill:#ff2300;
+    stroke:black;
+    stroke-width:1;
+  }
 }
